# FEAccelerate

./: .gitignore
1D Thermal Problem/: cpu.py  gpu.py
1D-Thermal/: cpu.py
1D-Thermal/cupy/: cpu.py  gpu.py
1D-Thermal/jit/: jit_accelerated.py  jit_v1.py  jit_v2.py  jit_v3.py
1D-Thermal/jit/archive/: jit_v1.py
1D-Thermal/main/: accelerated_model.py
2D-CPP/: CMakeLists.txt  CMkakeLists.txt  geom.cpp
2D-Maxwell/: assembly.py  geometry.py  main.py  verify.py
Maxwell-X57/: mesh.py
Scratch/: scratch.py
